--- a/init_data/volkswagenXetra.json
+++ b/init_data/volkswagenXetra.json
@@ -1,6 +1,6 @@
 {
     "symbol": "VOW3.DE",
-    "notificationCount": "default",
+    "notificationCount": "0",
     "interval": "default",
     "dayNightDuration": "default",
     "buy_price": "170",
