--- a/init_data/apple.json
+++ b/init_data/apple.json
@@ -1,6 +1,6 @@
 {
     "symbol": "AAPL",
-    "notificationCount": "default",
+    "notificationCount": "0",
     "interval": "default",
     "dayNightDuration": "default",
     "buy_price": "160",
