--- a/init_data/apple.json
+++ b/init_data/apple.json
@@ -2,7 +2,7 @@
     "symbol": "AAPL",
     "notificationCount": "0",
     "interval": "default",
-    "dayNightDuration": "default",
+    "dayNightDuration": "generalDayTime",
     "buy_price": "160",
     "sell_price": "180"
 }
